DevOps/k8s/helm/helm-values/keycloak/app-ingress-pip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsa
  namespace: app
  labels:
    app: fsa
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx/client_max_body_size: 10m
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 20.223.168.156.nip.io
      secretName: fsa-cert
  rules:
    - host: 20.223.168.156.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: honch-backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-frontend-svc
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
